--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class="container">
         <div id="logo">
-          <img src="./logo.png" alt="logo">
+          <img src="/logo.png" alt="logo">
         </div>
         <!-- Navigation bar -->
         <nav>
@@ -54,7 +54,7 @@
     <section id="boxes">
     <div class="container">
       <div class="box">
-        <img src="./logo_web.png" alt="Web logo">
+        <img src="/logo_web.png" alt="Web logo">
         <h3>Web</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut cursus commodo mollis. Ut bibendum vehicula leo,</p>
       </div>
