--- a/apropos.html
+++ b/apropos.html
@@ -20,7 +20,8 @@
           <ul>
             <li><a href="index.html">Accueil</a></li>
             <li class="current"><a href="apropos.html">A Propos</a></li>
-            <li><a href="prjt.html">Projets</a></li>
+            <li><a href="comp.html">Competences</a></li>
+            <li><a href="projet.html">Projets</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -28,16 +29,7 @@
 
     </header>
 
-<!-- Newsletter Formulaiure -->
 
-    <section id="newsletter">
-      <div class="container">
-        <h1>Souscrire à ma newsletter</h1>
-        <form  action="index.html" method="post">
-          <input type="email" placeholder="Enter votre email...">
-          <button type="submit" name="button">Souscrire</button>
-        </form>
-      </div>
 
     </section>
 <!-- about me-->
@@ -45,17 +37,45 @@
     <section id="main">
       <div class="container">
         <article id="main1">
-          <h1 class="page-titre">Apropos de Moi</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut cursus commodo mollis. Ut bibendum vehicula leo, nec accumsan magna malesuada non. Nulla laoreet sem vel laoreet accumsan. Aenean in elit varius, blandit diam quis, vestibulum diam. Praesent sed eleifend lacus. Maecenas et magna sit amet urna cursus efficitur in aliquet quam. Aenean blandit dictum massa, vitae auctor velit condimentum ut. Curabitur sed erat id eros pulvinar volutpat et et orci. Etiam elementum vel leo vitae aliquam. Nam et iaculis velit, eget ultricies dolor. Fusce faucibus velit purus, vitae semper mauris pulvinar sit amet.
+          <div id="Profil">
+          <img src="./img/sylv.jpg" alt="Moi">
+          </div>
+          <h2 class="page-titre">Apropos de Moi</h2>
+          <p>Bonjour, je suis Sylvain, Développeur d'application Java bientôt diplômé chez OpenClassrooms, je l'èspere :) .J'effectue ma formation en alternance avec la sociétée : Cartes et services. Je suis très pasionné par l'informatique en générale et tous qui touche à la technologie et l'informatique comme par exemple : L'hardware , l'Intelligence artificielle et aussi la crypto-monnaie, je m'interesse aussi beaucoup à l'art et à la musique pendant mon temps libre.
           </p>
-          <p class="sombre">In luctus enim a dolor finibus auctor. Proin lobortis lectus condimentum malesuada egestas. Maecenas sodales placerat justo, non pharetra ex sodales sit amet. Fusce in porta enim. Fusce lacus eros, sodales eget magna quis, congue dictum ex. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus eget eros iaculis, tristique risus vel, ultrices dolor. Vivamus facilisis ipsum ac sagittis aliquet. Etiam erat leo, porttitor consectetur felis sit amet, aliquam eleifend nibh. Sed a scelerisque risus. Pellentesque est elit, sagittis in molestie a, rutrum in risus.
+
+          <p>Mon rythme d'alternance est de 3 jours en Entreprise et 2 jours en formation , avec le planning que j'ai plannifié je devrais avoir la fini la formation d'ici mi-Août . Je travaille sur 2 projets actuellement avec la technologie Angular et Spring boot 2.
+            J'espère pouvoir ,après la fin de ce premier parcour OpenClassroom ,continué à me formé pour intégrer une license elle aussi en alternance et pourquoi pas dans le même entreprise.
           </p>
+
+          <h1 class="page-titre">Les logiciels que j'utlise </h1>
+          <p class="sombre">Voici les différents logiciels que j'utilise le plus quotidiennement en entreprise, j' utilise beaucoup d'autres logiciels comme Postman par exemple pour testé mon API , ou encore MongoDB Compass pour gérer mes différentes base de données.
+          </p>
+          <section id="boxes">
+          <div class="container">
+            <div class="box">
+              <img src="./img/spring.png" alt="Web logo">
+              <h3>Spring</h3>
+              <p>Pour le projet que je developpe actuellement j'utilise Spring Boot 2 </p>
+            </div>
+            <div class="box">
+              <img src="./img/eclipse.png" alt="Java logo">
+              <h3>Eclipse</h3>
+              <p>J'utilise Eclipse en entreprise mais j'aime bien utilisé IntelliJ en mode Personnel</p>
+            </div>
+            <div class="box">
+              <img src="./img/sourcetree.png" alt="Game logo">
+              <h3>SourceTree</h3>
+              <p>Pour gérer git ainsi que les versions de nos différents Projets</p>
+            </div>
+          </div>
+
         </article>
 
         <aside id="sidebar">
         <div class="sombre">
-          <h3>Qu'est-ce que je fais ?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut cursus commodo mollis. Ut bibendum vehicula leo, nec accumsan magna malesuada non. Nulla laoreet sem vel laoreet accumsan. Aenean in elit varius, blandit diam quis, vestibulum diam. Praesent sed eleifend lacus.</p>
+          <h3>Formation et Projets</h3>
+          <p>Je suis un ancien étudiant de BTS(informatique et réseau) je me suis redirigé vers OpenClassroom pour me specialisé dans ce que j'aime vraiment : la programmation d'application et le web. J'effectue actuellement la formation en alternance , j'envisage par la suite de faire une deuxième formation OpenClassroom ou d'intégré une license(D'AGPI) et faire une année de remise à niveau pour les cours un peut plus théorique </p>
         </div>
 
         </aside>
@@ -67,6 +87,15 @@
 
 
 <footer>
+<h3>Retrouvez-moi sur les réseaux !</h3>
+<div class="footer-social">
+
+  <a href="https://www.sololearn.com/Profile/6618468#"><img src="./img/sololearn.png"</img></a>
+  <a href="https://twitter.com/Sylvainsbrr"><img src="./img/twitter.png"</img></a>
+  <a href="https://www.linkedin.com/in/sylvain-souber-53748014b/"><img src="./img/linkd.png"</img></a>
+
+</div>
+
 
 <p>Blog de Sylvain Souber 2019 &copy; </p>
 
