--- a/apropos.html
+++ b/apropos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device=width">
     <title>A propos</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 
@@ -13,7 +13,7 @@
     <header>
       <div class="container">
         <div id="logo">
-          <img src="img\logo.png" alt="logo">
+          <img src="./logo.png" alt="logo">
         </div>
         <!-- Navigation bar -->
         <nav>
@@ -38,7 +38,7 @@
       <div class="container">
         <article id="main1">
           <div id="Profil">
-          <img src="./img/sylv.jpg" alt="Moi">
+          <img src="./sylv.jpg" alt="Moi">
           </div>
           <h2 class="page-titre">Apropos de Moi</h2>
           <p>Bonjour, je suis Sylvain, Développeur d'application Java bientôt diplômé chez OpenClassrooms, je l'èspere :) .J'effectue ma formation en alternance avec la sociétée : Cartes et services. Je suis très pasionné par l'informatique en générale et tous qui touche à la technologie et l'informatique comme par exemple : L'hardware , l'Intelligence artificielle et aussi la crypto-monnaie, je m'interesse aussi beaucoup à l'art et à la musique pendant mon temps libre.
@@ -54,12 +54,12 @@
           <section id="boxes">
           <div class="container">
             <div class="box">
-              <img src="./img/spring.png" alt="Web logo">
+              <img src="./spring.png" alt="Web logo">
               <h3>Spring</h3>
               <p>Pour le projet que je developpe actuellement j'utilise Spring Boot 2 </p>
             </div>
             <div class="box">
-              <img src="./img/eclipse.png" alt="Java logo">
+              <img src="./eclipse.png" alt="Java logo">
               <h3>Eclipse</h3>
               <p>J'utilise Eclipse en entreprise mais j'aime bien utilisé IntelliJ en mode Personnel</p>
             </div>
@@ -90,9 +90,9 @@
 <h3>Retrouvez-moi sur les réseaux !</h3>
 <div class="footer-social">
 
-  <a href="https://www.sololearn.com/Profile/6618468#"><img src="./img/sololearn.png"</img></a>
-  <a href="https://twitter.com/Sylvainsbrr"><img src="./img/twitter.png"</img></a>
-  <a href="https://www.linkedin.com/in/sylvain-souber-53748014b/"><img src="./img/linkd.png"</img></a>
+  <a href="https://www.sololearn.com/Profile/6618468#"><img src="./sololearn.png"</img></a>
+  <a href="https://twitter.com/Sylvainsbrr"><img src="./twitter.png"</img></a>
+  <a href="https://www.linkedin.com/in/sylvain-souber-53748014b/"><img src="./linkd.png"</img></a>
 
 </div>
 
