--- a/apropos.html
+++ b/apropos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device=width">
     <title>A propos</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 
@@ -13,7 +13,7 @@
     <header>
       <div class="container">
         <div id="logo">
-          <img src="/logo.png" alt="logo">
+          <img src="./logo.png" alt="logo">
         </div>
         <!-- Navigation bar -->
         <nav>
