--- a/apropos.html
+++ b/apropos.html
@@ -13,7 +13,7 @@
     <header>
       <div class="container">
         <div id="logo">
-          <img src="/logo.png" alt="logo">
+          <img src="logo.png" alt="logo">
         </div>
         <!-- Navigation bar -->
         <nav>
@@ -38,7 +38,7 @@
       <div class="container">
         <article id="main1">
           <div id="Profil">
-          <img src="/sylv.jpg" alt="Moi">
+          <img src="sylv.jpg" alt="Moi">
           </div>
           <h2 class="page-titre">Apropos de Moi</h2>
           <p>Bonjour, je suis Sylvain, Développeur d'application Java bientôt diplômé chez OpenClassrooms, je l'èspere :) .J'effectue ma formation en alternance avec la sociétée : Cartes et services. Je suis très pasionné par l'informatique en générale et tous qui touche à la technologie et l'informatique comme par exemple : L'hardware , l'Intelligence artificielle et aussi la crypto-monnaie, je m'interesse aussi beaucoup à l'art et à la musique pendant mon temps libre.
@@ -54,17 +54,17 @@
           <section id="boxes">
           <div class="container">
             <div class="box">
-              <img src="/spring.png" alt="Web logo">
+              <img src="spring.png" alt="Web logo">
               <h3>Spring</h3>
               <p>Pour le projet que je developpe actuellement j'utilise Spring Boot 2 </p>
             </div>
             <div class="box">
-              <img src="./eclipse.png" alt="Java logo">
+              <img src="eclipse.png" alt="Java logo">
               <h3>Eclipse</h3>
               <p>J'utilise Eclipse en entreprise mais j'aime bien utilisé IntelliJ en mode Personnel</p>
             </div>
             <div class="box">
-              <img src="/img/sourcetree.png" alt="Game logo">
+              <img src="sourcetree.png" alt="Game logo">
               <h3>SourceTree</h3>
               <p>Pour gérer git ainsi que les versions de nos différents Projets</p>
             </div>
