--- a/apropos.html
+++ b/apropos.html
@@ -64,7 +64,7 @@
               <p>J'utilise Eclipse en entreprise mais j'aime bien utilisé IntelliJ en mode Personnel</p>
             </div>
             <div class="box">
-              <img src="sourcetree.png" alt="Game logo">
+              <img src="/sourcetree.png" alt="Game logo">
               <h3>SourceTree</h3>
               <p>Pour gérer git ainsi que les versions de nos différents Projets</p>
             </div>
