--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class="container">
         <div id="logo">
-          <img src="logo.png" alt="logo">
+          <img src="./logo.png" alt="logo">
         </div>
         <!-- Navigation bar -->
         <nav>
@@ -54,17 +54,17 @@
     <section id="boxes">
     <div class="container">
       <div class="box">
-        <img src="logo_web.png" alt="Web logo">
+        <img src="./logo_web.png" alt="Web logo">
         <h3>Web</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut cursus commodo mollis. Ut bibendum vehicula leo,</p>
       </div>
       <div class="box">
-        <img src="logo_java.png" alt="Java logo">
+        <img src="./logo_java.png" alt="Java logo">
         <h3>JEE</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut cursus commodo mollis. Ut bibendum vehicula leo,</p>
       </div>
       <div class="box">
-        <img src="logo_unity.png" alt="Game logo">
+        <img src="./logo_unity.png" alt="Game logo">
         <h3>Game Design</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut cursus commodo mollis. Ut bibendum vehicula leo,</p>
       </div>
